--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,7 @@
             <div class="caller-avatar">
                 <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=150&h=150&fit=crop&crop=face" alt="Caller">
             </div>
-            <div class="caller-name">प्रिया / Priya</div>
+            <div class="caller-name">Priya</div>
             <div class="call-status" id="callStatus" data-hi="वीडियो कॉल आ रही है..." data-en="Incoming Video Call...">वीडियो कॉल आ रही है...</div>
         </div>
         
