--- a/image.html
+++ b/image.html
@@ -7,42 +7,42 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #2b1055, #7597de);
+      background: linear-gradient(135deg, #1a1a2e, #16213e);
       color: #fff;
       text-align: center;
-      padding: 50px 20px;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      padding: 40px 20px;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255,255,255,0.08);
       border-radius: 15px;
       padding: 30px;
       max-width: 600px;
       margin: auto;
-      box-shadow: 0 4px 30px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 30px rgba(0,0,0,0.4);
+    }
+
+    h1 {
+      color: #00d4ff;
     }
 
     input[type="file"] {
-      padding: 10px;
       background: #fff;
       color: #000;
       border-radius: 10px;
-      margin-top: 10px;
+      padding: 10px;
+      margin-top: 15px;
+      cursor: pointer;
     }
 
     button {
-      margin-top: 20px;
       background: #00c896;
       border: none;
       padding: 12px 25px;
       border-radius: 10px;
       color: #fff;
       font-size: 1rem;
+      margin-top: 15px;
       cursor: pointer;
       transition: 0.3s;
     }
@@ -55,78 +55,90 @@
       margin-top: 20px;
       max-width: 100%;
       border-radius: 10px;
+      display: none;
     }
 
     #outputLink {
-      margin-top: 20px;
+      margin-top: 15px;
       display: block;
+      color: #ffde59;
       word-wrap: break-word;
-      color: #ffdd57;
+      text-decoration: none;
+    }
+
+    #status {
+      margin-top: 15px;
+      color: #ccc;
+      font-style: italic;
     }
 
     footer {
       margin-top: 40px;
-      font-size: 0.9rem;
       opacity: 0.7;
     }
   </style>
 </head>
 <body>
-  <h1>🖼️ Image to URL Converter</h1>
   <div class="container">
-    <p>Select an image to convert it into a shareable URL.</p>
-    <input type="file" id="imageInput" accept="image/*"><br>
-    <button onclick="convertImage()">Generate Image URL</button>
+    <h1>🖼️ Image to URL Converter</h1>
+    <p>Upload an image and get a short shareable link instantly.</p>
 
-    <img id="preview" src="" alt="" hidden>
-    <a id="outputLink" href="#" target="_blank"></a>
+    <input type="file" id="imageInput" accept="image/*">
+    <br>
+    <button onclick="uploadImage()">Generate URL</button>
+
+    <p id="status"></p>
+    <img id="preview" src="" alt="Preview">
+    <a id="outputLink" target="_blank"></a>
   </div>
 
   <footer>Made with ❤️ | Multi Tool Hub</footer>
 
   <script>
-    function convertImage() {
-      const input = document.getElementById('imageInput');
-      const preview = document.getElementById('preview');
-      const outputLink = document.getElementById('outputLink');
+    async function uploadImage() {
+      const fileInput = document.getElementById("imageInput");
+      const status = document.getElementById("status");
+      const preview = document.getElementById("preview");
+      const outputLink = document.getElementById("outputLink");
 
-      if (!input.files.length) {
-        alert("Please select an image first!");
+      if (!fileInput.files.length) {
+        alert("Please select an image!");
         return;
       }
 
-      const file = input.files[0];
-      const reader = new FileReader();
+      const file = fileInput.files[0];
+      status.textContent = "Uploading image...";
+      preview.style.display = "none";
+      outputLink.textContent = "";
 
-      reader.onload = function(e) {
-        const imageData = e.target.result;
+      // Imgur API (no account needed)
+      const clientId = "YOUR_IMGUR_CLIENT_ID"; // Replace this with your own Imgur Client ID
+      const formData = new FormData();
+      formData.append("image", file);
 
-        // Set image preview
-        preview.src = imageData;
-        preview.hidden = false;
+      try {
+        const res = await fetch("https://api.imgur.com/3/image", {
+          method: "POST",
+          headers: { Authorization: `Client-ID ${clientId}` },
+          body: formData
+        });
 
-        // Generate a “viewable” link using Base64 Data URL
-        const encoded = encodeURIComponent(imageData);
-        const shareableURL = `${window.location.origin}${window.location.pathname}?image=${encoded}`;
+        const data = await res.json();
 
-        outputLink.href = shareableURL;
-        outputLink.textContent = shareableURL;
-      };
-
-      reader.readAsDataURL(file);
-    }
-
-    // If a URL contains ?image=... then auto-display that image
-    const params = new URLSearchParams(window.location.search);
-    const imageParam = params.get('image');
-    if (imageParam) {
-      const decodedImage = decodeURIComponent(imageParam);
-      const container = document.querySelector('.container');
-      container.innerHTML = `
-        <h2>📷 Shared Image</h2>
-        <img src="${decodedImage}" style="max-width:100%; border-radius:10px;">
-        <br><a href="/" style="color:#00c896;">⬅️ Upload Another Image</a>
-      `;
+        if (data.success) {
+          const imageUrl = data.data.link;
+          status.textContent = "✅ Upload successful!";
+          preview.src = imageUrl;
+          preview.style.display = "block";
+          outputLink.href = imageUrl;
+          outputLink.textContent = imageUrl;
+        } else {
+          status.textContent = "❌ Upload failed. Try again.";
+        }
+      } catch (err) {
+        console.error(err);
+        status.textContent = "⚠️ Error uploading image.";
+      }
     }
   </script>
 </body>
