--- a/index.html
+++ b/index.html
@@ -1854,7 +1854,7 @@
                 location: 'Delhi', 
                 online: false, 
                 rating: 4.9, 
-                image: 'https://images.unsplash.com/photo-1517841905240-472988babdf9?w=150&h=150&fit=crop&crop=face' 
+                image: 'https://in.pinterest.com/pin/indian-girl-in-top-and-shorts--633248397614348229/' 
             },
             { 
                 id: 3,
