--- a/index.html
+++ b/index.html
@@ -1953,7 +1953,7 @@
                 location: 'Surat', 
                 online: true, 
                 rating: 4.8, 
-                image: 'https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&crop=face' 
+                image: 'https://freeimage.host/i/KsB6Ltn' 
             },
             { 
                 id: 14,
@@ -1971,7 +1971,7 @@
                 location: 'Nagpur', 
                 online: true, 
                 rating: 4.9, 
-                image: 'https://images.unsplash.com/photo-1517841905240-472988babdf9?w=150&h=150&fit=crop&crop=face' 
+                image: 'https://freeimage.host/i/KsB6Ltn' 
             }
         ];
 
