--- a/index.html
+++ b/index.html
@@ -2059,7 +2059,7 @@
                 
                 const age = document.createElement('div');
                 age.className = 'girl-age';
-                age.textContent = `${girl.age} वर्ष / Years`;
+                age.textContent = `${girl.age} Years`;
                 
                 const location = document.createElement('div');
                 location.className = 'girl-location';
