--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
         
         <div class="caller-info">
             <div class="caller-avatar">
-                <img src="https://github.com/website-vc/Service/blob/main/android-chrome-192x192.png" alt="Caller">
+                <img src="https://unsplash.com/photos/a-woman-in-a-red-bikini-standing-in-front-of-a-brick-wall-G6gxCCkprMM" alt="Caller">
             </div>
             <div class="caller-name">Priya</div>
             <div class="call-status" id="callStatus" data-hi="वीडियो कॉल आ रही है..." data-en="Incoming Video Call...">वीडियो कॉल आ रही है...</div>
