--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
         
         <div class="caller-info">
             <div class="caller-avatar">
-                <img src="https://unsplash.com/photos/a-woman-in-a-red-bikini-standing-in-front-of-a-brick-wall-G6gxCCkprMM" alt="Caller">
+                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=150&h=150&fit=crop&crop=face" alt="Caller">
             </div>
             <div class="caller-name">Priya</div>
             <div class="call-status" id="callStatus" data-hi="वीडियो कॉल आ रही है..." data-en="Incoming Video Call...">वीडियो कॉल आ रही है...</div>
