--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+    <script type='text/javascript' src='//pl27963395.effectivegatecpm.com/b7/5d/43/b75d43878670211ffb9af7229a692fb8.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Indian Girls Video Call Service</title>
