--- a/index.html
+++ b/index.html
@@ -2895,5 +2895,6 @@
             animateStats();
         });
     </script>
+    <script type='text/javascript' src='//pl27963397.effectivegatecpm.com/80/5a/fe/805afee402faf826dafef9dc97f0f8b0.js'></script>
 </body>
 </html>
